# imap-to-local-html

./: .gitignore  README.md  pyproject.toml
mail-archiver/: imap-to-local-html.py  mail-archiver.py  mailutils.py  run.py  templating.py  utils.py
mail-archiver/assets/bootstrap-icons/: bootstrap-icons.css  bootstrap-icons.json  bootstrap-icons.scss  index.html
mail-archiver/assets/css/: dashboard.css
mail-archiver/templates/: folder-breadcrumbs.tpl  html.tpl  nav-ul.tpl  page-index.html.tpl  page-mail-list.tpl  page-mail.tpl  thread-ul.tpl
samples/: imap-to-local-html.sample.yml
